--- a/src/css/components/blocks/quote.scss
+++ b/src/css/components/blocks/quote.scss
@@ -1,10 +1,9 @@
 .quote {
-    @include container($page-container);
     @include grid();
-    padding: var(--spacing-medium) 0;
+    margin: var(--spacing-medium) 0;
 
     &__inner {
-        grid-column: 3 / span 8;
+        grid-column: 3 / span 7;
 
         @include mq($until: desktop) {
             grid-column: 1 / span 12;
@@ -28,8 +27,5 @@
 
 .blocks--blog {
     .quote {
-        @include mq($from: desktop) {
-            background-color: $color-light-grey;
-        }
     }
 }
